--- a/src/contact.html
+++ b/src/contact.html
@@ -123,19 +123,28 @@
     <div
       class="hero min-h-screen shadow-lg"
       style="
-        background-image: url(https://img.wongnai.com/p/800x0/2022/04/27/c2beafec8cf44f4097802a8697d2f51b.jpg);
+        background-image: url(https://img.wongnai.com/p/800x0/2022/04/28/eb143b80526346b1a533ce75bab0fb2b.jpg);
       "
     >
       <div class="hero-overlay bg-opacity-60"></div>
       <div class="hero-content text-center text-neutral-content">
         <div class="glass-blur max-w-md p-7">
-          <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
-          <p class="mb-5">
-            Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
-            excepturi exercitationem quasi. In deleniti eaque aut repudiandae et
-            a id nisi.
-          </p>
-          <button class="btn btn-primary">Get Started</button>
+          <h1 class="text-shadow-3 mb-5 text-5xl font-bold text-primary">
+            Contact
+          </h1>
+          <div class="mb-5">
+            <img
+              src="https://www.dropbox.com/scl/fi/eb7dmr0nraj8h14mt49eq/IMG_20231101_154716-Custom.jpg?rlkey=9dm0cstezsn2z7lt1h2cnq4lm&raw=1"
+              loading="lazy"
+              class="my-5 rounded-lg"
+              id="Contact_Hover"
+            />
+            <div>
+              <div class="text-shadow-1 text-primary">นาย ธนกร มีทรัพย์</div>
+              <div class="text-shadow-1 text-primary">65209010019</div>
+              <div class="text-shadow-1 text-primary">Tel : 0832245477</div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
