--- a/src/content.html
+++ b/src/content.html
@@ -120,6 +120,7 @@
     <br />
 
     <!-- content -->
+    <div class="hero-overlay"></div>
     <div
       class="grid grid-cols-3 justify-items-center bg-base-200 py-10 pt-20 shadow-xl"
     >
