--- a/src/about.html
+++ b/src/about.html
@@ -56,8 +56,8 @@
       </div>
       <div class="navbar-end">
         <a
-          class="tooltip tooltip-left tooltip-primary mr-5 text-primary"
-          data-tip="By Tanakorn Meesarp"
+          class="tooltip tooltip-left tooltip-warning mr-5 text-warning"
+          data-tip="This website didn't fully support mobile"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -153,7 +153,20 @@
       <div class="hero-content text-center text-neutral-content">
         <div class="glass-blur max-w-md p-7 px-20">
           <h1 class="mb-5 text-5xl font-bold text-primary">About</h1>
-          <p class="mb-5 text-white">Website นี้สร้างขึ้นมาเพื่อส่งงานของชมรมเขียนโค้ด</p>
+          <p class="mb-2 text-white">
+            Website นี้สร้างขึ้นมาเพื่อส่งงานของชมรมเขียนโค้ด
+          </p>
+          <p class="mb-5 text-white">
+            Framework : Tailwind CSS 3.4.1, DaisyUI 4.6.1
+          </p>
+          <h1 class="mb-2 text-3xl font-bold text-primary">Credit</h1>
+          <p class="mb-5 text-white">
+            <a
+              href="https://www.wongnai.com/food-tips/beautiful-sea-in-thailand"
+              target="_blank"
+              >https://www.wongnai.com/food-tips/beautiful-sea-in-thailand</a
+            >
+          </p>
         </div>
       </div>
     </div>
