--- a/src/contact.html
+++ b/src/contact.html
@@ -56,8 +56,8 @@
       </div>
       <div class="navbar-end">
         <a
-          class="tooltip tooltip-left tooltip-primary mr-5 text-primary"
-          data-tip="By Tanakorn Meesarp"
+          class="tooltip tooltip-left tooltip-warning mr-5 text-warning"
+          data-tip="This website didn't fully support mobile"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
