--- a/src/index.html
+++ b/src/index.html
@@ -56,8 +56,8 @@
       </div>
       <div class="navbar-end">
         <a
-          class="tooltip tooltip-left tooltip-primary mr-5 text-primary"
-          data-tip="By Tanakorn Meesarp"
+          class="tooltip tooltip-left tooltip-warning mr-5 text-warning"
+          data-tip="This website didn't fully support mobile"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -162,7 +162,8 @@
     <!-- Gallery -->
     <div
       id="#Card_First"
-      class="grid grid-cols-3 justify-items-center bg-base-200 py-10 shadow-xl"
+      class="flex bg-base-200 shadow-xl"
+      style="justify-content: space-evenly"
     >
       <div class="card card-compact bg-base-100 shadow-xl" style="width: 400px">
         <figure>
@@ -175,7 +176,9 @@
         <div class="card-body">
           <h2 class="card-title">ทะเลเกาะทะลุ จ.ประจวบคีรีขันธ์</h2>
           <div class="card-actions justify-end">
-            <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
+            <a href="./content.html">
+              <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
+            </a>
           </div>
         </div>
       </div>
@@ -190,7 +193,9 @@
         <div class="card-body">
           <h2 class="card-title">ทะเลเกาะราชาใหญ่ จ.ภูเก็ต</h2>
           <div class="card-actions justify-end">
-            <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
+            <a href="./content.html">
+              <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
+            </a>
           </div>
         </div>
       </div>
@@ -205,7 +210,9 @@
         <div class="card-body">
           <h2 class="card-title">ทะเลเกาะมุก จ.ตรัง</h2>
           <div class="card-actions justify-end">
-            <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
+            <a href="./content.html">
+              <button class="text-shadow-2 btn btn-primary">Visit Now!</button>
+            </a>
           </div>
         </div>
       </div>
